# todos-with-axum

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 20240403132625_create_todos_table.down.sql
migrations/2024-03-24-155437_create_todo_table/: up.sql
src/: main.rs  router.rs  schema.rs
src/configs/: db.rs  mod.rs  state.rs
src/constants/: error_response.rs
src/modules/todos/: controllers.rs  mod.rs  models.rs  service.rs  views.rs
src/tests/: mod.rs  router.rs
src/tests/configs/: db.rs  mod.rs  state.rs
src/tests/constants/: error_response.rs
src/tests/modules/: mod.rs
src/tests/modules/todos/: service.rs
src/tests/modules/todos/fixtures/: mock_todo.sql  mock_todos.sql
src/tests/utils/: app.rs
src/utils/: app.rs  error.rs  mod.rs
src/views/: errors.rs  mod.rs  pagination.rs
