[package]
name = "todos-with-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "= 0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
uuid = { version = "1.8.0", features = ["v4"] }
futures = { version = "0.3.30", optional = true }

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
rstest = "0.18.2"

[features]
async_closure = ["dep:futures"]
